Change from Java Servlet API to Jakarta Servlet API version 5.0.0 (c.d.)
 - Change imports to 'jakarta.servlet' in modules currently importing
code from 'javax.servlet' package and its subpackages

 - Remove dependencies on 'org.osgi.service.http' specification API
classes and methods by migrating to `org.osgi.service.servlet`
specification API

 - Upgrade to snapshot release of 'commons-fileupload2' where
'commons-fileupload' was used so far

 - Remove 'JavaServlet' OSGi contract metadata from POMs

 - Remove OSGi metadata from POMs where it refers to
'org.osgi.service.http'

 - Remove 'javax.servlet:javax.servlet-api' Maven dependency where
'jakarta.servlet:jakarta.servlet-api' Maven dependency already exists

 - Upgrade 'org.apache.felix' group dependencies to latest available
versions

 - Upgrade 'org.osgi' group dependencies to latest available versions

 - Replace 'org.osgi:osgi.cmpn' dependency with per-specification
bundles

Signed-off-by: Michael H. Siemaszko <mhs@into.software>